// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`numbers-metrics Renders \`numbers-metrics\` with custom props 1`] = `
<div
  class="layout kpi-widget column align-center"
>
  <h4
    class="kpi-widget__title"
  >
    Custom title
  </h4>
  <div
    class="layout kpi-widget__list wrap"
  >
    <numbers-metrics-item-stub
      metric="[object Object]"
      showtrend="true"
      valuefontsize="110"
    />
    <numbers-metrics-item-stub
      metric="[object Object]"
      showtrend="true"
      valuefontsize="110"
    />
  </div>
  <div
    class="layout kpi-widget__actions mt-4 justify-end"
  >
    <button
      class="v-btn v-btn--is-elevated v-btn--has-bg theme--light v-size--small primary"
      type="button"
    >
      <span
        class="v-btn__content"
      >
        <i
          aria-hidden="true"
          class="v-icon notranslate v-icon--left material-icons theme--light"
          style="font-size: 16px;"
        >
          file_download
        </i>
        <span>
          Export as csv
        </span>
      </span>
    </button>
  </div>
</div>
`;

exports[`numbers-metrics Renders \`numbers-metrics\` with default props 1`] = `
<div
  class="layout kpi-widget column align-center"
>
  <h4
    class="kpi-widget__title"
  >
  </h4>
  <div
    class="layout kpi-widget__list wrap"
  />
  <div
    class="layout kpi-widget__actions mt-4 justify-end"
  >
    <button
      class="v-btn v-btn--is-elevated v-btn--has-bg theme--light v-size--small primary"
      type="button"
    >
      <span
        class="v-btn__content"
      >
        <i
          aria-hidden="true"
          class="v-icon notranslate v-icon--left material-icons theme--light"
          style="font-size: 16px;"
        >
          file_download
        </i>
        <span>
          Export as csv
        </span>
      </span>
    </button>
  </div>
</div>
`;
